--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,19 @@ default: &default
   pool: 5
   username: postgres
   password: password
-  host: localhost
+  host: db
   port: 5432
 
 development:
   <<: *default
   database: refei_tech_Teste
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: test
+  pool: 5
+  username: test
+  password: 123456
+  host: db
+  port: 5432
